--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,39 +4,21 @@ on:
   workflow_dispatch:
   pull_request:
     types: [opened, reopened, synchronize]
+    paths:
+      - 'src/**'
+      - '*.slnx'
+      - '.github/workflows/build.yml'
   push:
     branches:
       - main
+    paths:
+      - 'src/**'
+      - '*.slnx'
+      - '.github/workflows/build.yml'
 
 jobs:
   build:
-    runs-on: windows-latest
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: 8.0.x
-
-      - name: Setup MSBuild
-        uses: microsoft/setup-msbuild@v2
-
-      - name: Version VSIX
-        uses: CodingWithCalvin/GHA-VSVsixVersioner@main
-        with:
-          extension-manifest-file: src/CodingWithCalvin.VsixManifestDesigner/source.extension.vsixmanifest
-          extension-source-file: src/CodingWithCalvin.VsixManifestDesigner/source.extension.cs
-
-      - name: Restore dependencies
-        run: dotnet restore src/CodingWithCalvin.VsixManifestDesigner/CodingWithCalvin.VsixManifestDesigner.csproj
-
-      - name: Build
-        run: dotnet build src/CodingWithCalvin.VsixManifestDesigner/CodingWithCalvin.VsixManifestDesigner.csproj --configuration Release --no-restore
-
-      - name: Upload VSIX artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: vsix
-          path: src/CodingWithCalvin.VsixManifestDesigner/bin/Release/*.vsix
+    uses: CodingWithCalvin/.github/.github/workflows/vsix-build.yml@main
+    with:
+      extension-name: VsixManifestDesigner
+    secrets: inherit
