--- a/src/CodingWithCalvin.VsixManifestDesigner/CodingWithCalvin.VsixManifestDesigner.csproj
+++ b/src/CodingWithCalvin.VsixManifestDesigner/CodingWithCalvin.VsixManifestDesigner.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="CodingWithCalvin.VsixSdk/0.3.0">
+<Project Sdk="CodingWithCalvin.VsixSdk/0.4.0">
 
   <PropertyGroup>
     <TargetFramework>net48</TargetFramework>
@@ -24,6 +24,7 @@
     <PackageReference Include="CodingWithCalvin.Otel4Vsix" Version="*" />
     <PackageReference Include="Microsoft.VisualStudio.ProjectSystem" Version="17.*" />
     <PackageReference Include="Microsoft.VisualStudio.SDK" Version="17.*" />
+    <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="17.*" PrivateAssets="all" />
   </ItemGroup>
 
   <!-- Include resources in VSIX -->
