fix(ci): add job-level permissions for publish workflow
Add explicit permissions at the job level to ensure they flow
correctly to the reusable workflow for creating GitHub releases.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,6 +9,9 @@ permissions:
 
 jobs:
   publish:
+    permissions:
+      contents: write
+      actions: read
     uses: CodingWithCalvin/.github/.github/workflows/vsix-publish.yml@main
     with:
       extension-name: VsixManifestDesigner
