fix(ci): update extension description

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,6 +17,6 @@ jobs:
       extension-name: VsixManifestDesigner
       display-name: 'VSIX Manifest Designer'
       marketplace-id: CodingWithCalvin.VS-VsixManifestDesigner
-      description: 'Visual Studio extension providing a visual designer for VSIX manifest files'
+      description: 'A Visual Studio extension providing a modern visual designer for VSIX manifest files!'
       hashtags: ''
     secrets: inherit
