fix(ci): add job-level permissions for publish workflow (#15)
* fix(ci): add job-level permissions for publish workflow

Add explicit permissions at the job level to ensure they flow
correctly to the reusable workflow for creating GitHub releases.

* fix(ci): update extension description

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,11 +9,14 @@ permissions:
 
 jobs:
   publish:
+    permissions:
+      contents: write
+      actions: read
     uses: CodingWithCalvin/.github/.github/workflows/vsix-publish.yml@main
     with:
       extension-name: VsixManifestDesigner
       display-name: 'VSIX Manifest Designer'
       marketplace-id: CodingWithCalvin.VS-VsixManifestDesigner
-      description: 'Visual Studio extension providing a visual designer for VSIX manifest files'
+      description: 'A Visual Studio extension providing a modern visual designer for VSIX manifest files!'
       hashtags: ''
     secrets: inherit
