fix(ci): add back Bluesky notification with marketplace link

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,6 +14,8 @@ env:
 jobs:
   publish:
     runs-on: windows-latest
+    outputs:
+      version: ${{ steps.artifact_manifest.outputs.version }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -24,9 +26,31 @@ jobs:
           workflow: build.yml
           workflow_conclusion: success
 
-      - name: 2. Publish to Marketplace
+      - name: 2. Parse Artifact Manifest
+        id: artifact_manifest
+        uses: ActionsTools/read-json-action@main
+        with:
+          file_path: ./artifact/${{ env.INFO_FILE }}
+
+      - name: 3. Publish to Marketplace
         uses: CodingWithCalvin/GHA-VSMarketplacePublisher@v1
         with:
           marketplace-pat: ${{ secrets.VS_PAT }}
           publish-manifest-path: ./resources/extension.manifest.json
           vsix-path: ./artifact/${{ env.VSIX_FILE }}
+
+  notify-bluesky:
+    needs: publish
+    uses: CodingWithCalvin/.github/.github/workflows/bluesky-post.yml@main
+    with:
+      post_text: |
+        🚀 VSIX Manifest Designer v${{ needs.publish.outputs.version }} for #VisualStudio has been released!
+
+        [Check it out on the VS Marketplace!](https://marketplace.visualstudio.com/items?itemName=CodingWithCalvin.VS-VsixManifestDesigner)
+
+        #dotnet #vsix
+      embed_title: VSIX Manifest Designer for Visual Studio
+      embed_description: A Visual Studio extension providing a modern visual designer for VSIX manifest files!
+    secrets:
+      BLUESKY_USERNAME: ${{ secrets.BLUESKY_USERNAME }}
+      BLUESKY_APP_PASSWORD: ${{ secrets.BLUESKY_APP_PASSWORD }}
