--- a/resources/extension.manifest.json
+++ b/resources/extension.manifest.json
@@ -9,6 +9,6 @@
   },
   "overview": "../README.md",
   "publisher": "CodingWithCalvin",
-  "qna": false,
-  "repo": "https://www.github.com/CodingWithCalvin/VS-VsixManifestDesigner"
+  "qna": true,
+  "repo": "https://github.com/CodingWithCalvin/VS-VsixManifestDesigner"
 }
