--- a/.github/workflows/contributors.yml
+++ b/.github/workflows/contributors.yml
@@ -1,14 +1,13 @@
 name: Update Contributors
 
 on:
-  push:
-    branches:
-      - main
   schedule:
-    - cron: '0 0 * * *'
+    - cron: '0 6 * * *'
   workflow_dispatch:
 
 jobs:
   contributors:
     uses: CodingWithCalvin/.github/.github/workflows/contributors.yml@main
+    with:
+      output-format: html
     secrets: inherit
